CSS/style.css
*{
    padding: 0;
    margin: 0;
}

header{
    height: 45px;
}

header nav ul{
    display: flex;
    margin-left: 70%;
    list-style: none;
}

header nav ul li{
    padding-left: 10%;
}

header a{
    text-decoration: none;
    color: rgb(68, 68, 68);
    
}

section{
    height: 100vh;
    border: 1px solid grey;
    display: flex;
    justify-content: center;
    align-items: center;
}

.Row{
    display: flex;
    align-items: flex-end;
}

.Container{
    margin-top: 5%;
}

.Container img{
    height: 500px;
    padding-right: 5%;
}

.Container h2{
    margin-top: 2%;
    font-size: 3em;
    max-width: 10ch;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.Container p, ul{
    margin-top: 2%;
    max-width: 60ch;
    color: rgb(68, 68, 68);
    font-size: 1.5rem;
}

footer {
    line-height: 40px;
    display: flex;
    justify-content: center;
}

